# faceable

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
public/: course-explainer.avif
public/locales/en-US/: translation.json
public/locales/zh-CN/: translation.json
src/: App.tsx  index.css  main.tsx  util.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/plugins/: mod.rs  tauri_traffic_light_positioner_plugin.rs
src/components/: AnimatedRoute.tsx  LeafletMap.tsx  LocaleSwitcher.tsx  Navbar.tsx  WindowTitlebar.tsx
src/i18n/: config.ts
src/layouts/: DefaultLayout.tsx
src/pages/DashboardPage/: index.tsx
src/pages/HomePage/: home.css  index.tsx
src/pages/SettingsPage/: index.tsx
src/pages/UploadPage/: index.tsx
